--- a/src/app/features/admin/views/edit-user/edit-user.component.html
+++ b/src/app/features/admin/views/edit-user/edit-user.component.html
@@ -21,7 +21,7 @@
             </button>
         </div>
     </form>
-    <hr>
+    <hr class="line-separator">
     <ng-container *ngIf="userDtos">
         <app-users-table [userDtos]="userDtos">
         </app-users-table>
