--- a/src/app/features/admin/views/edit-user/edit-user.component.scss
+++ b/src/app/features/admin/views/edit-user/edit-user.component.scss
@@ -2,4 +2,9 @@
   max-height: 38px;
   margin-left: 15px;
   margin-right: 15px;
+  margin-bottom: 15px;
+}
+
+.line-separator {
+  margin-top: 0;
 }
