--- a/src/app/features/admin/views/show-users/show-users.component.html
+++ b/src/app/features/admin/views/show-users/show-users.component.html
@@ -3,6 +3,8 @@
         All Users
     </h2>
     <app-users-table
-            [userDtos]="userDtos">
+            [userDtos]="userDtos"
+            [columns]="columns"
+    >
     </app-users-table>
  </div>
