--- a/src/app/features/admin/views/edit-user/edit-user.component.html
+++ b/src/app/features/admin/views/edit-user/edit-user.component.html
@@ -11,6 +11,7 @@
                     [placeholder]="'Search'"
                     [maxLength]="64"
                     [fieldInfo]="'Search for a user to edit.'"
+                    (keydown.enter)="onSearchButtonClicked()"
             >
             </app-input-text>
             <button
