--- a/src/app/features/admin/component/users-table/users-table.component.html
+++ b/src/app/features/admin/component/users-table/users-table.component.html
@@ -50,3 +50,8 @@
         </tbody>
     </table>
 </div>
+<ng-container *ngIf="hasNoDataMessage">
+    <div class="no-data-message">
+        {{ noDataMessage }}
+    </div>
+</ng-container>
