--- a/src/app/features/admin/component/users-table/users-table.component.scss
+++ b/src/app/features/admin/component/users-table/users-table.component.scss
@@ -2,3 +2,9 @@
   width: 62px;
   text-align: center;
 }
+
+.no-data-message {
+  margin-top: 64px;
+  margin-bottom: 64px;
+  text-align: center;
+}
