--- a/src/app/features/admin/views/edit-user/edit-user.component.html
+++ b/src/app/features/admin/views/edit-user/edit-user.component.html
@@ -16,7 +16,7 @@
             </app-input-text>
             <button
                     class="col-md-auto btn btn-primary search-button"
-                    [disabled]="isSearchButtonDisabled()"
+                    [disabled]="isSearchButtonDisabled"
                     (click)="onSearchButtonClicked()"
             >
                 Search
