Update user form
- Populate update form with selected user to edit
- Removed debug code
- Some clean ups

--- a/src/app/features/admin/components/users-table/users-table.component.html
+++ b/src/app/features/admin/components/users-table/users-table.component.html
@@ -25,7 +25,9 @@
         </tr>
         </thead>
         <tbody>
-            <tr *ngFor="let rowModel of tableRowModel">
+            <tr
+                    *ngFor="let rowModel of tableRowModel"
+                    (click)="onTableRowClicked(rowModel)">
                 <ng-container *ngIf="showColumn(nameColumnName)">
                     <td>
                         {{ rowModel.name }}
